--- a/src/app/home/components/sidebar/sidebar.component.html
+++ b/src/app/home/components/sidebar/sidebar.component.html
@@ -1,3 +1,3 @@
 <div class="w-[12rem] p-5 flex flex-col gap-3 border-r-2" style="height: calc(100vh - 4rem);">
-    <div *ngFor="let item of sidebarItems" class="w-full px-4 py-3 rounded-xl bg-slate-400 ">{{ item }}</div>
+    <div *ngFor="let item of sidebarItems" class="w-full px-4 py-3 rounded-xl bg-slate-400 transition ease-in-out duration-100 hover:bg-slate-500 active:scale-95">{{ item }}</div>
 </div>
