--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*::-webkit-scrollbar {
+    width: 0px !important;
+    background-color: white !important;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    width: 0px !important;
+    background-color: whitesmoke !important;
+    border-radius: 0px !important;
+  }
+  
+  *::-webkit-scrollbar:horizontal {
+    width: 0px !important;
+    background-color: white !important;
+  }
+  
+  *::-webkit-scrollbar-thumb:horizontal {
+    width: 0px !important;
+    background-color: whitesmoke !important;
+    border-radius: 0px;
+  }
