--- a/src/app/home/components/header/header.component.html
+++ b/src/app/home/components/header/header.component.html
@@ -22,21 +22,22 @@
             <div class="text-[2rem]"><b>Add Transaction</b></div>
             <div class="flex flex-col">
                 <label for="" class="pl-2">Transaction Type</label>
-                <select formControlName="transactionType" name="" id="" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300">
+                <div *ngIf="trTypeError && trTypeTouched" class="text-red-900 pl-2">
+                    Choose transaction type
+                </div>
+                <select (blur)="trTypeChange($event)" formControlName="transactionType" name="" id="" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300">
                     <option value="" class="outline-none bg-gray-200 py-2 px-3" selected disabled>Choose transaction type</option>
                     <option value="income" class="outline-none bg-gray-200 py-2 px-3 hover:bg-slate-300">Income</option>
                     <option value="expense" class="outline-none bg-gray-200 py-2 px-3">Expense</option>
                 </select>
             </div>
 
-            <div class="flex flex-col">
-                <label for="" class="pl-2">Transaction Amount</label>
-                <input type="number" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300">
-            </div>
-            
-            <div class="flex flex-col" *ngIf="transactionForm?.get('transactionType')?.value">
+            <div class="flex flex-col" *ngIf="transactionForm.get('transactionType')?.value">
                 <label for="" class="pl-2">Category</label>
-                <select *ngIf="transactionForm?.get('transactionType')?.value === 'income'" name="" id="" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300">
+                <div *ngIf="trCategoryError && trCategoryTouched" class="text-red-900 pl-2">
+                    Choose transaction category
+                </div>
+                <select (blur)="trCategoryChange($event)" formControlName="transactionCategory" *ngIf="transactionForm.get('transactionType')?.value === 'income'" name="" id="" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300">
                     <option value="" class="outline-none bg-gray-200 py-2 px-3" selected disabled>Choose amount category</option>
                     <option value="salary" class="outline-none bg-gray-200 py-2 px-3 hover:bg-slate-300">Salary</option>
                     <option value="freelance" class="outline-none bg-gray-200 py-2 px-3">Freelance</option>
@@ -44,8 +45,8 @@
                     <option value="business" class="outline-none bg-gray-200 py-2 px-3">Business</option>
                     <option value="other" class="outline-none bg-gray-200 py-2 px-3">Other income</option>
                 </select>  
-
-                <select *ngIf="transactionForm?.get('transactionType')?.value === 'expense'" name="" id="" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300">
+                
+                <select (blur)="trCategoryChange($event)" formControlName="transactionCategory" *ngIf="transactionForm.get('transactionType')?.value === 'expense'" name="" id="" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300">
                     <option value="" class="outline-none bg-gray-200 py-2 px-3" selected disabled>Choose amount category</option>
                     <option value="home" class="outline-none bg-gray-200 py-2 px-3">Home maintanance</option>
                     <option value="transportaion" class="outline-none bg-gray-200 py-2 px-3">Transportaion</option>
@@ -59,19 +60,33 @@
                     
                 </select>      
             </div>
-
+            
+            <div class="flex flex-col">
+                <label for="" class="pl-2">Transaction Amount</label>
+                <div *ngIf="trMoneyError && trMoneyTouched" class="text-red-900 pl-2">
+                    Enter transaction amount
+                </div>
+                <input (blur)="trMoneyChange($event)" formControlName="transactionAmount" type="number" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300">
+            </div>
+            
             <div class="flex flex-col">
                 <label for="" class="pl-2">Description</label>
-                <textarea type="text" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300"></textarea>
+                <div *ngIf="trDescriptionError && trDescriptionTouched" class="text-red-900 pl-2">
+                    Provide transaction description
+                </div>
+                <textarea (blur)="trDescriptionChange($event)" formControlName="transactionDescription" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300"></textarea>
             </div>
 
             <div class="flex flex-col">
                 <label for="" class="pl-2">Date</label>
-                <input type="date" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300">
+                <div *ngIf="trDateError && trDateTouched" class="text-red-900 pl-2">
+                    Select transaction date
+                </div>
+                <input (blur)="trDateChange($event)" formControlName="transactionDate" type="date" class="outline-none bg-gray-200 py-2 px-3 rounded-lg focus:bg-slate-300">
             </div>
             <div class="flex justify-between mt-2">
                 <button class="px-5 py-2 rounded-lg transition ease-in-out active:scale-95 bg-slate-400" (click)="addTransaction()">Cancel</button>
-                <button class="px-5 py-2 rounded-lg transition ease-in-out active:scale-95 bg-slate-400">Create</button>
+                <button class="px-5 py-2 rounded-lg transition ease-in-out active:scale-95 bg-slate-400 disabled:cursor-not-allowed" [disabled]="transactionForm.invalid" type="submit" (click)="onSubmit()">Create</button>
             </div>
         </div>
     </div>
